@@ -1498,6 +1498,18 @@ on the <a>'mask element'</a> element or any of its ancestors is set to
 
 <p class=todo>Descriptions of the general model missing.</p>
 
+<div class=example>
+  <div class=figure>
+    <img src="images/mask-box-image.svg" alt="Example for 'mask-box-image'" width="720" height="240">
+    <p class=caption>Example for 'mask-box-image'. The object on the left is the object to mask. The second image is the alpha mask and the last image the masked object.</p>
+    <p class=issue>Image should be replaced by a PNG that does not use &lt;mask&gt;</p>
+  </div>
+  <pre>
+#img {
+  mask-box-image: url(mask.png) 25 stretch;
+}</pre>
+</div>
+
 <h3 id="the-mask-box-image-source">The 'mask-box-image-source' property</h3>
 
 <table class=propdef>
