@@ -31,14 +31,14 @@
 
    <h1>CSS Masking</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 14 August 2012</h2>
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 15 August 2012</h2>
 
    <dl>
     <dt>This version:
 
     <dd><a
      href="http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/tip/masking/index.html</a>
-     <!--http://www.w3.org/TR/2012/WD-css-masking-20120814/-->
+     <!--http://www.w3.org/TR/2012/WD-css-masking-20120815/-->
 
     <dt>Latest version:
 
@@ -2438,6 +2438,24 @@ div {
 
   <p class=todo>Descriptions of the general model missing.
 
+  <div class=example>
+   <div class=figure> <img alt="Example for 'mask-box-image'" height=240
+    src="images/mask-box-image.svg" width=720>
+    <p class=caption>Example for ‘<a href="#mask-box-image0"><code
+     class=property>mask-box-image</code></a>’. The object on the left is
+     the object to mask. The second image is the alpha mask and the last
+     image the masked object.</p>
+
+    <p class=issue>Image should be replaced by a PNG that does not use
+     &lt;mask&gt;</p>
+   </div>
+
+   <pre>
+#img {
+  mask-box-image: url(mask.png) 25 stretch;
+}</pre>
+  </div>
+
   <h3 id=the-mask-box-image-source><span class=secno>7.1. </span>The ‘<a
    href="#mask-box-image-source"><code
    class=property>mask-box-image-source</code></a>’ property</h3>
@@ -3445,7 +3463,7 @@ div {
      user coordinate system for the element referencing the <a
      class=element-name href="#ClipPathElement">‘<code
      class=property>clipPath</code>’</a> element via the <a class=property
-     href="HASH(0x7fe823848178)">‘<code
+     href="HASH(0x7fc119048178)">‘<code
      class=property>clip-path</code>’</a> property).<br>
      If <span class=attr-value>clipPathUnits="objectBoundingBox"</span>, then
      the user coordinate system for the contents of the <a class=element-name
@@ -3473,9 +3491,9 @@ div {
   <p><a class=element-name href="#ClipPathElement">‘<code
    class=property>clipPath</code>’</a> elements are never rendered
    directly; their only usage is as something that can be referenced using
-   the <a class=property href="HASH(0x7fe823848178)">‘<code
+   the <a class=property href="HASH(0x7fc119048178)">‘<code
    class=property>clip-path</code>’</a> property. The <a class=property
-   href="HASH(0x7fe823847e30)">‘<code class=property>display</code>’</a>
+   href="HASH(0x7fc119047e30)">‘<code class=property>display</code>’</a>
    property does not apply to the <a class=element-name
    href="#ClipPathElement">‘<code class=property>clipPath</code>’</a>
    element; thus, <a class=element-name href="#ClipPathElement">‘<code
@@ -3485,7 +3503,7 @@ div {
    class=element-name href="#ClipPathElement">‘<code
    class=property>clipPath</code>’</a> elements are available for
    referencing even when the <a class=property
-   href="HASH(0x7fe823847e30)">‘<code class=property>display</code>’</a>
+   href="HASH(0x7fc119047e30)">‘<code class=property>display</code>’</a>
    property on the <a class=element-name href="#ClipPathElement">‘<code
    class=property>clipPath</code>’</a> element or any of its ancestors is
    set to <a class=prop-value href="#none">none</a>.
