@@ -1,4 +1,7 @@
 2012-08-14 dschulze@adobe.com
+	Added example for 'mask-box-image'
+
+2012-08-14 dschulze@adobe.com
 	Add new example of masking in the intro.
 
 2012-08-13 dschulze@adobe.com
